--- a/art12/templates/summary/content/population_bs.html
+++ b/art12/templates/summary/content/population_bs.html
@@ -1,6 +1,6 @@
 {% from 'common/_macros.html' import additional_info %}
 
-<td class="default-td border_left">
+<td class="default-td border_left" title="{{ row.population_quality_bs or '' }}">
 	<div class="first-subcolumn">{{ population_size_unit(row.bs) or '' }}</div>
 </td>
 
