--- a/art12/templates/summary/content/range.html
+++ b/art12/templates/summary/content/range.html
@@ -1,9 +1,9 @@
 {% from 'common/_macros.html' import additional_info %}
 
-<td class="default-td border_left">
-	<span class="conclusion">
-    <div class="first-subcolumn">{{ row.range_surface_area_bs|int or '' }}</div>
-	</span>
+<td class="default-td border_left" title="{{ row.range_quality_bs or '' }}">
+    <div class="first-subcolumn">
+      {{ row.range_surface_area_bs|int or '' }}
+    </div>
 </td>
 
 {{ additional_info(row.range_additional_info_record_bs, row.range_additional_info_bs) }}
