[templates] change the way of display for additional info

--- a/art12/templates/common/_macros.html
+++ b/art12/templates/common/_macros.html
@@ -27,9 +27,9 @@
 
 {% macro additional_info(bool, value) %}
   <td class="default-td"
-      {% if bool == 'Y' %}
+      {% if bool %}
         title="{{ value|wordwrap }}"
       {% endif %}>
-    {% if bool == 'Y' %}&#35;{% endif %}
+    {{ bool or '' }}
   </td>
 {% endmacro %}
