--- a/art12/templates/config.html
+++ b/art12/templates/config.html
@@ -28,6 +28,14 @@
       {{ render_field_with_errors(form.sensitive_species_map_url) }}
     </div>
 
+    <div class="form-group">
+      {{ render_field_with_errors(form.eu_species_map_url) }}
+    </div>
+
+    <div class="form-group">
+      {{ render_field_with_errors(form.eu_sensitive_species_map_url) }}
+    </div>
+
     <div>
       <button class="btn-blue" type="submit">Save</button>
     </div>
