Fix decimal part in gridded maps.

--- a/art12/templates/summary/content/gridded_maps.html
+++ b/art12/templates/summary/content/gridded_maps.html
@@ -1,11 +1,11 @@
 <td class="default-td border_left">
-	{{ row.distribution_grid_area|float or '' }}
+	{{ row.distribution_grid_area|int or '' }}
 </td>
 <td class="center">
 	{{ row.percentage_distribution_grid_area|float or '' }}
 </td>
 <td class="default-td">
-	{{ row.range_grid_area|float or '' }}
+	{{ row.range_grid_area|int or '' }}
 </td>
 <td class="center">
 	{{ row.percentage_range_grid_area|float or '' }}
