[templates] insert another header row in the table

--- a/art12/templates/common/species_table_header.html
+++ b/art12/templates/common/species_table_header.html
@@ -8,14 +8,23 @@
 
 <tr>
   {% if is_reports %}
-  <th rowspan="2">Species</th>
+  <th rowspan="3">Species</th>
   {% else %}
-  <th rowspan="2" title="Member states">MS</th>
+  <th rowspan="3" title="Member states">MS</th>
   {% endif %}
   <th colspan="8">Breeding Population</th>
   <th colspan="8">Breeding Range</th>
   <th colspan="8">Winter Population</th>
-  <th colspan="4">Areas from gridded maps (km<sup>2</sup>)</th>
+  <th colspan="4" rowspan="2">Areas from gridded maps (km<sup>2</sup>)</th>
+</tr>
+
+<tr>
+  <th colspan="3">Population</th>
+  <th colspan="5">Trend</th>
+  <th colspan="3">Surface</th>
+  <th colspan="5">Trend</th>
+  <th colspan="3">Population</th>
+  <th colspan="5">Trend</th>
 </tr>
 
 <tr>
