--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -22,6 +22,11 @@
 
     {% if current_selection %}
       {% include 'summary/buttons.html' with context %}
+      {% if map_warning %}
+        <p class="note"><strong>Warning</strong>:
+          The map does not show the distribution for sensitive species in {{ map_warning }}
+        </p>
+      {% endif %}
       {% include 'common/legend.html' %}
       <table class="complex_datatable">
         <caption>
