[templates] add tooltip for MS level table and gray color for some cells

--- a/art12/templates/common/species_table_header.html
+++ b/art12/templates/common/species_table_header.html
@@ -29,42 +29,42 @@
 
 <tr>
   {#  Breeding Population #}
-  <th>Size&amp;Unit</th>
-  <th>&#8505;</th>
-  <th title="Percentage of area of the Breeding Population per MS">% MS</th>
-  <th>Period</th>
-  <th title="Short term trend {{ TREND_TOOLTIP }}">ST Trend</th>
-  <th>Period</th>
-  <th title="Long term trend {{ TREND_TOOLTIP }}">LT Trend</th>
-  <th>&#8505;</th>
+  <th title="Population size (min-max) and unit">Size&amp;Unit</th>
+  <th title="Population size - additional information available">&#8505;</th>
+  <th title="Percentage of EU27 population per MS" class="gray-cell">% MS</th>
+  <th title="Short-term population trend period">Period</th>
+  <th title="Short-term population trend direction and magnitude (min-max) {{ TREND_TOOLTIP }}">ST Trend</th>
+  <th title="Long-term population trend period">Period</th>
+  <th title="Long-term population trend direction and magnitude (min-max) {{ TREND_TOOLTIP }}">LT Trend</th>
+  <th title="Population trends - additional information available">&#8505;</th>
 
   {# Breeding Range #}
-  <th>Area</th>
-  <th>&#8505;</th>
-  <th title="Percentage of area of the Range per MS">% MS</th>
-  <th>Period</th>
-  <th title="Short term trend {{ TREND_TOOLTIP }}">ST Trend</th>
-  <th>Period</th>
-  <th title="Long term trend {{ TREND_TOOLTIP }}">LT Trend</th>
-  <th>&#8505;</th>
+  <th title="Range surface area km<sup>2</sup>">Area</th>
+  <th title="Range - additional information available">&#8505;</th>
+  <th title="Percentage of EU27 range per MS" class="gray-cell">% MS</th>
+  <th title="Short-term range trend period">Period</th>
+  <th title="Short term range trend direction and magnitude (min-max) {{ TREND_TOOLTIP }}">ST Trend</th>
+  <th title="Long-term range trend period">Period</th>
+  <th title="Long term range trend direction and magnitude (min-max) {{ TREND_TOOLTIP }}">LT Trend</th>
+  <th title="Range trends - additional information available">&#8505;</th>
 
   {# Winter Population #}
-  <th>Size&amp;Unit</th>
-  <th>&#8505;</th>
-  <th title="Percentage of area of the Winter Population per MS">% MS</th>
-  <th>Period</th>
-  <th title="Short term trend {{ TREND_TOOLTIP }}">ST Trend</th>
-  <th>Period</th>
-  <th title="Long term trend {{ TREND_TOOLTIP }}">LT Trend</th>
-  <th>&#8505;</th>
+  <th title="Population size (min-max) and unit">Size&amp;Unit</th>
+  <th title="Population size - additional information available">&#8505;</th>
+  <th title="Percentage of EU27 population per MS" class="gray-cell">% MS</th>
+  <th title="Short-term population trend period">Period</th>
+  <th title="Short-term population trend direction and magnitude (min-max) {{ TREND_TOOLTIP }}">ST Trend</th>
+  <th title="Long-term population trend period">Period</th>
+  <th title="Long-term population trend direction and magnitude (min-max) {{ TREND_TOOLTIP }}">LT Trend</th>
+  <th title="Population trends - additional information available">&#8505;</th>
 
   {# Areas from gridded maps #}
-  <th title="Distribution">Distrib.</th>
-  <th title="Percentage of the surface of the Distribution Map, which has been gridded per MS">
+  <th title="Area of breeding distribution from GIS data" class="gray-cell">Distrib.</th>
+  <th title="Percentage of the surface area of GIS distribution per MS" class="gray-cell">
     % MS
   </th>
-  <th title="Range">Range</th>
-  <th title="Percentage of the surface of the Range Map, which has been gridded per MS">
+  <th title="Area of breeding range from GIS data" class="gray-cell">Range</th>
+  <th title="Percentage of the surface area of GIS range per MS" class="gray-cell">
     % MS
   </th>
 </tr>
