--- a/art12/templates/summary/content/gridded_maps.html
+++ b/art12/templates/summary/content/gridded_maps.html
@@ -1,10 +1,10 @@
-<td class="default-td border_left">
+<td class="center border_left">
 	{{ row.distribution_grid_area|int or '' }}
 </td>
 <td class="center">
 	{{ row.percentage_distribution_grid_area|float or '' }}
 </td>
-<td class="default-td">
+<td class="center">
 	{{ row.range_grid_area|int or '' }}
 </td>
 <td class="center">
