[templates] add tooltip for EU level table

--- a/art12/templates/common/species_table_eu_header.html
+++ b/art12/templates/common/species_table_eu_header.html
@@ -19,18 +19,18 @@
 
 <tr>
   {# Breeding Population #}
-  <th colspan="3">Size &amp; Unit</th>
-  <th colspan="2" title="Short term trend {{ TREND_TOOLTIP }}">ST Trend</th>
-  <th colspan="3" title="Long term trend {{ TREND_TOOLTIP }}">LT Trend</th>
+  <th colspan="3" title="Population size (minimum-maximum) and unit">Size &amp; Unit</th>
+  <th colspan="2" title="Short-term population trend (c.2001–2012), direction and magnitude, if available {{ TREND_TOOLTIP }}">ST Trend</th>
+  <th colspan="3" title="Long-term population trend (c.1980–2012), direction and magnitude, if available {{ TREND_TOOLTIP }}">LT Trend</th>
 
   {# Breeding Range #}
-  <th colspan="3">Area</th>
-  <th colspan="2" title="Short term trend {{ TREND_TOOLTIP }}">ST Trend</th>
-  <th colspan="3" title="Long term trend {{ TREND_TOOLTIP }}">LT Trend</th>
+  <th colspan="3" title="Surface area of breeding range (km<sup>2</sup>)">Area</th>
+  <th colspan="2" title="Short-term range trend (c.2001–2012), direction and magnitude, if available {{ TREND_TOOLTIP }}">ST Trend</th>
+  <th colspan="3" title="Long-term range trend (c.1980–2012), direction and magnitude, if available {{ TREND_TOOLTIP }}">LT Trend</th>
 
   {# Winter Population #}
-  <th colspan="3">Size &amp; Unit</th>
-  <th colspan="2" title="Short term trend {{ TREND_TOOLTIP }}">ST Trend</th>
-  <th colspan="3" title="Long term trend {{ TREND_TOOLTIP }}">LT Trend</th>
+  <th colspan="3" title="Population size (minimum-maximum) and unit">Size &amp; Unit</th>
+  <th colspan="2" title="Short-term population trend (c.2001–2012), direction and magnitude, if available {{ TREND_TOOLTIP }}">ST Trend</th>
+  <th colspan="3" title="Long-term population trend (c.1980–2012), direction and magnitude, if available {{ TREND_TOOLTIP }}">LT Trend</th>
 </tr>
 </tbody>
