--- a/art12/templates/summary/content/ms.html
+++ b/art12/templates/summary/content/ms.html
@@ -22,7 +22,7 @@
           {% endif %}
           {% if row.presence_ws %}
             <br/>
-            Wintering population presence: {{ row.presence_ws }}
+            Winter population presence: {{ row.presence_ws }}
           {% endif %}
         </p>
         {% if not row.is_assesm %}
