--- a/art12/templates/homepage.html
+++ b/art12/templates/homepage.html
@@ -16,11 +16,12 @@
         <li><a href="{{ url_for('auth.users') }}">Users</a></li>
       {% endif %}
       <li><a href="{{ url_for('common.config') }}">Settings</a></li>
-      <li><a href="{{ url_for('auth.change_password') }}">Change password</a></li>
     </ul>
-  {% elif current_user.is_authenticated() %}
+  {% endif %}
+  {% if current_user.is_authenticated() %}
     <h2>My account</h2>
     <ul>
+      <li><a href="{{ url_for('common.change_details') }}">Change details</a></li>
       <li><a href="{{ url_for('auth.change_password') }}">Change password</a></li>
     </ul>
   {% else %}
