fix the form saving containing URLs for EU maps

--- a/art12/templates/config.html
+++ b/art12/templates/config.html
@@ -35,11 +35,19 @@
     </div>
 
     <div class="form-group">
-      {{ render_field_with_errors(form.eu_species_map_url) }}
+      {{ render_field_with_errors(form.eu_species_map_breeding_url) }}
     </div>
 
     <div class="form-group">
-      {{ render_field_with_errors(form.eu_sensitive_species_map_url) }}
+      {{ render_field_with_errors(form.eu_sensitive_species_map_breeding_url) }}
+    </div>
+
+    <div class="form-group">
+      {{ render_field_with_errors(form.eu_species_map_winter_url) }}
+    </div>
+
+    <div class="form-group">
+      {{ render_field_with_errors(form.eu_sensitive_species_map_winter_url) }}
     </div>
 
     <div>
