--- a/art12/templates/summary/buttons.html
+++ b/art12/templates/summary/buttons.html
@@ -17,13 +17,13 @@
 	{% endif %}
 
 	{% if eu_map_breeding_url %}
-		<button type="button" id="show-eu-map" data-url="{{ eu_map_url }}">EU map of Breeding population trend</button>
+		<button type="button" id="show-eu-map" data-url="{{ eu_map_breeding_url }}">EU map of Breeding population trend</button>
   {% else %}
     <button type="button" class="disabled">EU map of Breeding population trend</button>
 	{% endif %}
 
 	{% if eu_map_winter_url %}
-		<button type="button" id="show-eu-map" data-url="{{ eu_map_url }}">EU map of Winter population trend</button>
+		<button type="button" id="show-eu-map" data-url="{{ eu_map_winter_url }}">EU map of Winter population trend</button>
   {% else %}
     <button type="button" class="disabled">EU map of Winter population trend</button>
 	{% endif %}
