Add a notice beside legend

--- a/art12/templates/common/legend.html
+++ b/art12/templates/common/legend.html
@@ -36,4 +36,10 @@
       Fluctuating
     </dd>
   </dl>
+
+  <p>
+    Please note that additional information on mouse over values and 
+    trends stands for the quality of the underlying data as reported 
+    by Member States.
+  </p>
 </div>
