--- a/art12/templates/common/species_table_header.html
+++ b/art12/templates/common/species_table_header.html
@@ -16,6 +16,7 @@
   <th colspan="8">Breeding Range</th>
   <th colspan="8">Winter Population</th>
   <th colspan="4" rowspan="2">Areas from gridded maps (km<sup>2</sup>)</th>
+  <th rowspan="2"></th>
 </tr>
 
 <tr>
