--- a/art12/templates/summary/eu/population_ws.html
+++ b/art12/templates/summary/eu/population_ws.html
@@ -1,1 +1,17 @@
-<td colspan="8"></td>
+<td colspan="3" class="default-td border_left">
+  {{ row.wi_population_size or '' }} {{ row.wi_population_size_unit or '' }}
+</td>
+
+<td colspan="2"
+    class="trend-{{ TREND_CLASSES.get(row.wi_population_trend) }}">
+  <span class="conclusion">
+		{{ row.wi_population_trend or '' }}
+	</span>
+</td>
+
+<td colspan="3"
+    class="trend-{{ TREND_CLASSES.get(row.wi_population_trend_long) }}">
+  <span class="conclusion">
+		{{ row.wi_population_trend_long or '' }}
+	</span>
+</td>
