--- a/art12/templates/summary/eu/range.html
+++ b/art12/templates/summary/eu/range.html
@@ -1,1 +1,17 @@
-<td colspan="8"></td>
+<td colspan="3" class="center border_left">
+  {{ row.br_range_surface_area_downrounded }}
+</td>
+
+<td colspan="2"
+    class="trend-{{ TREND_CLASSES.get(row.br_range_trend) }}">
+  <span class="conclusion">
+		{{ row.br_range_trend or '' }}
+	</span>
+</td>
+
+<td colspan="3"
+    class="trend-{{ TREND_CLASSES.get(row.br_range_trend_long) }}">
+  <span class="conclusion">
+		{{ row.br_range_trend_long or '' }}
+	</span>
+</td>
