--- a/art12/templates/common/legend.html
+++ b/art12/templates/common/legend.html
@@ -36,6 +36,14 @@
       Fluctuating
     </dd>
   </dl>
+{#  <dl>#}
+{#    {% for label,cls in STATUS_CLASSES.items() %}#}
+{#    <dt class="status-{{ cls }}">#}
+{#      <abbr title="{{ label }}" class="conclusion">{{ label }}</abbr>#}
+{#    </dt>#}
+{#    <dd>{{ label }}</dd>#}
+{#    {% endfor %}#}
+{#  </dl>#}
 </div>
 <p>
     Please note that additional information on mouse over values and 
