--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -66,6 +66,11 @@
         {% endfor %}
         </tbody>
       </table>
+      <p>
+        The hash sign (#) under Subspecies/subspecific units-Trends or Status
+        means that the EU population trends or EU status were not assessed at
+        the same level as the current selection (species and subspecific unit).
+      </p>
     {% else %}
       <p><b>Please select a species.</b></p>
     {% endif %}
