--- a/art12/templates/summary/eu/range.html
+++ b/art12/templates/summary/eu/range.html
@@ -3,14 +3,14 @@
 </td>
 
 <td colspan="2"
-    class="trend-{{ TREND_CLASSES.get(row.br_range_trend) }}">
+    class="trend-{{ TREND_CLASSES.get(row.br_range_trend) }} text-center">
   <span class="conclusion">
 		{{ row.br_range_trend or '' }}
 	</span>
 </td>
 
 <td colspan="3"
-    class="trend-{{ TREND_CLASSES.get(row.br_range_trend_long) }}">
+    class="trend-{{ TREND_CLASSES.get(row.br_range_trend_long) }} text-center">
   <span class="conclusion">
 		{{ row.br_range_trend_long or '' }}
 	</span>
