[viewer] Update the conclusions in the progress page. Refs #21212

--- a/art12/templates/common/legend.html
+++ b/art12/templates/common/legend.html
@@ -46,7 +46,9 @@
 {#  </dl>#}
 </div>
 <p>
-    Please note that additional information on mouse over values and 
-    trends stands for the quality of the underlying data as reported 
-    by Member States.
+    The EU population status assessment was carried out at the species level.
+    The EU status assessment can cover several subspecies/subspecific units,
+    which are listed on mouse over the Bird status symbol. The EU trends were
+    assessed at the subspecies level. The EU trends can cover several
+    subspecific units, which are listed on mouse over the Trend symbol.
 </p>
