[wording] Update homepage looks. Refs #21212

--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -10,7 +10,7 @@
 
 {% block content %}
   <div class="copy-disabled" tabindex="1">
-    <h1>EU population status assessments</h1>
+    <h1>Population status and trends at the EU and Member State levels</h1>
 
     <p>
       Choose a period and a species.
