--- a/art12/templates/homepage.html
+++ b/art12/templates/homepage.html
@@ -1,12 +1,60 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-  <h1>Welcome to Article 12</h1>
+  <h1>
+    Welcome to the Article 12 web tool on population status and trends of
+    birds under Article 12 of the Birds Directive
+  </h1>
 
+  <p class="documentDescription">
+    This page gives access to information reported by the Member States and
+    the EU assessments of birds population status made by the European Red List
+    of Birds Consortium (under contract with the European Commission).
+  </p>
+
+  <div class="warning">
+    <small>
+      <a href="http://eea.europa.eu" rel="external">EEA</a> is not responsible
+      or liable for information on this site. Content does not necessarily
+      reflect the official opinion of
+      <a href="http://eea.europa.eu" rel="external">EEA</a> or other European
+      Communities bodies and institutions.
+    </small>
+  </div>
+
+  <p>
+    The methods used for the assessment of EU population status are described
+    <a href="https://circabc.europa.eu/d/a/workspace/SpacesStore/4b101339-6e13-4379-ada5-400e5d1ec8ac/Point 3 - Background-Paper- 21 Nov 2013 .pdf" rel="external">here</a>.
+  </p>
+
+  <p>
+    <strong>
+      Birds population status and trends at EU 27 and Member State level (species by species filter):
+    </strong>
+  </p>
   <ul>
-    <li><a href="{{ url_for('.summary') }}">EU population status assessments</a></li>
-    <li><a href="{{ url_for('.progress') }}">Summary of EU Assessments</a></li>
-    <li><a href="{{ url_for('.report') }}">Member States data</a></li>
+    <li><a href="{{ url_for('.summary') }}">
+        Birds population status and trends</a></li>
+  </ul>
+
+  <p>
+    <strong>
+      Birds trends at Member State level (overview of results by Member State):
+    </strong>
+  </p>
+  <ul>
+    <li><a href="{{ url_for('.report') }}">
+        Birds trends</a></li>
+  </ul>
+
+  <p>
+    <strong>
+      Birds population status and trends at EU 27 level (overview of results) :
+    </strong>
+  </p>
+  <ul>
+    <li><a href="{{ url_for('.progress') }}">
+        Birds population status and trends</a></li>
   </ul>
 
   {% if admin_perm.can() %}
