--- a/art12/templates/common/legend.html
+++ b/art12/templates/common/legend.html
@@ -35,6 +35,13 @@
     <dd>
       Fluctuating
     </dd>
+
+    <dt class="trend-u">
+      <abbr title="Uncertain" class="conclusion">U</abbr>
+    </dt>
+    <dd>
+      Uncertain
+    </dd>
   </dl>
 {#  <dl>#}
 {#    {% for label,cls in STATUS_CLASSES.items() %}#}
@@ -46,9 +53,14 @@
 {#  </dl>#}
 </div>
 <p>
+  {% if page_type == 'progress' %}
     The EU population status assessment was carried out at the species level.
     The EU status assessment can cover several subspecies/subspecific units,
     which are listed on mouse over the Bird status symbol. The EU trends were
     assessed at the subspecies level. The EU trends can cover several
     subspecific units, which are listed on mouse over the Trend symbol.
+  {% else %}
+    Please note that additional information on mouse over values and trends
+    stands for the quality of the underlying data as reported by Member States.
+  {% endif %}
 </p>
