--- a/art12/templates/summary/species.html
+++ b/art12/templates/summary/species.html
@@ -9,7 +9,7 @@
 
 
 {% block content %}
-  <div class="copy-disabled" tabindex="1">
+  <div tabindex="1">
     <h1>Population status and trends at the EU and Member State levels</h1>
 
     <p>
@@ -27,7 +27,8 @@
           The map does not show the distribution for sensitive species in {{ map_warning }}
         </p>
       {% endif %}
-      {% include 'common/legend.html' %}
+      {% set page_type='summary' %}
+      {% include 'common/legend.html' with context %}
       <table class="complex_datatable">
         <caption>
           <b>Current selection</b>:
