--- a/art12/templates/common/species_table_eu_header.html
+++ b/art12/templates/common/species_table_eu_header.html
@@ -38,7 +38,7 @@ B: breeding season">Season</th>
   <th colspan="3" title="Long-term population trend (c.1980–2012), direction and magnitude, if available {{ TREND_TOOLTIP_EU }}">LT Trend</th>
 
   {# Status #}
-  <th title="The EU population status assessment was carried out at the species level. The EU status assessment can cover several subspecies/subspecific units.">Trends</th>
-  <th title="The EU trends were assessed at the subspecies level. The EU trends can cover several subspecific units.">Status</th>
+  <th title="The EU trends were assessed at the subspecies level. The EU trends can cover several subspecific units.">Trends</th>
+  <th title="The EU population status assessment was carried out at the species level. The EU status assessment can cover several subspecies/subspecific units.">Status</th>
 </tr>
 </tbody>
