[viewer] Fix maps on FF and IE. Refs #21212

--- a/art12/templates/summary/eu_map.html
+++ b/art12/templates/summary/eu_map.html
@@ -1,7 +1,7 @@
 {% block content %}
   <body>
     {% if map_uri %}
-      <img src="{{ map_uri }}" height="780">
+      <img src="{{ map_uri }}">
     {% else %}
       <p>
         There is no map available for the selected species.
