[viewer] Fix label rendering. Refs #21212

--- a/art12/templates/common/species_table_header.html
+++ b/art12/templates/common/species_table_header.html
@@ -60,12 +60,12 @@
   <th title="Population trends - additional information available">&#8505;</th>
 
   {# Areas from gridded maps #}
-  <th title="Area of breeding distribution from GIS data" class="gray-cell">Distrib.</th>
-  <th title="Percentage of the surface area of GIS distribution per MS" class="gray-cell">
+  <th data-tooltip-place="sw" title="Area of breeding distribution from GIS data" class="gray-cell">Distrib.</th>
+  <th data-tooltip-place="sw" title="Percentage of the surface area of GIS distribution per MS" class="gray-cell">
     % MS
   </th>
-  <th title="Area of breeding range from GIS data" class="gray-cell">Range</th>
-  <th title="Percentage of the surface area of GIS range per MS" class="gray-cell">
+  <th data-tooltip-place="sw" title="Area of breeding range from GIS data" class="gray-cell">Range</th>
+  <th data-tooltip-place="sw" title="Percentage of the surface area of GIS range per MS" class="gray-cell">
     % MS
   </th>
 </tr>
