--- a/art12/templates/common/species_table_eu_header.html
+++ b/art12/templates/common/species_table_eu_header.html
@@ -15,7 +15,7 @@
   <th colspan="8">Winter Population</th>
   <th rowspan="2" title="EU population status">Bird Status</th>
   <th rowspan="2" title="{{ CONTRIB_OPTIONS }}">Contribution<br/>to target 1</th>
-  <th rowspan="2" title="The population status was assessed based on data from:
+  <th rowspan="2" data-tooltip-place="sw" title="The population status was assessed based on data from:
 W: winter season
 B: breeding season">Season</th>
   <th colspan="2">Subspecies /<br/>subspecific units</th>
@@ -38,7 +38,7 @@ B: breeding season">Season</th>
   <th colspan="3" title="Long-term population trend (c.1980–2012), direction and magnitude, if available {{ TREND_TOOLTIP_EU }}">LT Trend</th>
 
   {# Status #}
-  <th title="The EU trends were assessed at the subspecies level. The EU trends can cover several subspecific units.">Trends</th>
-  <th title="The EU population status assessment was carried out at the species level. The EU status assessment can cover several subspecies/subspecific units.">Status</th>
+  <th data-tooltip-place="sw" title="The EU trends were assessed at the subspecies level. The EU trends can cover several subspecific units.">Trends</th>
+  <th data-tooltip-place="sw" title="The EU population status assessment was carried out at the species level. The EU status assessment can cover several subspecies/subspecific units.">Status</th>
 </tr>
 </tbody>
