[species_formatting] Clean None values in the species listing. Refs #25843

--- a/art12/templates/summary/eu/population_bs.html
+++ b/art12/templates/summary/eu/population_bs.html
@@ -1,5 +1,5 @@
 <td colspan="3" class="default-td border_left">
-  {{ row.br_population_size }} {{ row.br_population_size_unit }}
+  {{ row.br_population_size or '' }} {{ row.br_population_size_unit or '' }}
 </td>
 
 <td colspan="2"
