--- a/art12/templates/summary/eu/range.html
+++ b/art12/templates/summary/eu/range.html
@@ -1,5 +1,5 @@
 <td colspan="3" class="center border_left">
-  {{ row.br_range_surface_area_downrounded }}
+  {{ row.br_range_surface_area_downrounded or '' }}
 </td>
 
 <td colspan="2"
