--- a/art12/templates/summary/eu/status.html
+++ b/art12/templates/summary/eu/status.html
@@ -1,13 +1,13 @@
 <td class="center border_left status-{{ STATUS_CLASSES.get(row.conclusion_status_label) }} text-center">
   <span class="conclusion">
-  {{ row.conclusion_status_label }}
+  {{ row.conclusion_status_label or '' }}
   </span>
 </td>
 <td class="center">
-  {{ row.contribution_target1_label }}
+  {{ row.contribution_target1_label or '' }}
 </td>
 <td class="center">
-  {{ row.conclusion_status_br_wi }}
+  {{ row.conclusion_status_br_wi or '' }}
 </td>
 <td class="center" title="{{ row.conclusion_status_level2 }}">
   {{ row.conclusion_status_level2_record or '' }}
