[Factsheet] Add style, refs #24521.

--- a/art12/templates/layout_pdf.html
+++ b/art12/templates/layout_pdf.html
@@ -6,6 +6,7 @@
     <title>{% block title %}{% endblock %}</title>
 
     <style type="text/css">
+      {{ inject_static_file('css/print-factsheet.css') }}
     </style>
 
     {% block head %}{% endblock %}
