[factsheet] Add subpopulation lists, ref #24521.

--- a/art12/templates/factsheet/species.html
+++ b/art12/templates/factsheet/species.html
@@ -66,4 +66,14 @@
     </table>
   </section>
 
+  <p>See the endnotes for more information<sup>i</sup></p>
+
+  <p>When relevant reporting guidelines requests separate reports for
+  subspecies and/or subspecific populations. The population status assessments
+  at the EU level were carried out at the species level1. The EU status
+  assessment covers following subspecies/populations:
+  {{ obj.first_list | join(', ') }}. The EU trends were assessed at the
+  subspecies level. The EU trends cover following subspecies/populations:
+  {{ obj.second_list | join(', ') }}.</p>
+
 {% endblock %}
